==================
JellyRoll Change Log
==================

Version 0.11.0.7, 21 August, 2018
------------------------------
* Fix admin settings

Version 0.11.0.6, 21 August, 2018
------------------------------
* Fix PayPal IPN

Version 0.11.0.5, 21 August, 2018
------------------------------
* Handle AddressNotFoundError when using geoip
* Add URL to payment success error email
* Empty shipping migrations
  Covered by tieredweightzone migrations, split during Django 2.1 upgrade
* Add obj=None to ExchangeRateInline has_add_permission
* Fix calculating of currency converted discounts

Version 0.11.0.4, 20 August, 2018
------------------------------
* Don't re-encode shipping description

Version 0.11.0.3, 20 August, 2018
------------------------------
* Redirect to order status if we can't find the order in the request

Version 0.11.0.2, 20 August, 2018
------------------------------
* Improve Order.objects.from_request
* Raise 404 for bad_or_missing

Version 0.11.0.1, 20 August, 2018
------------------------------
* Parse JSON request body in six fulfilment module

Version 0.11.0.0, 20 August, 2018
------------------------------
* Upgrade to Python 3
* Upgrade to Django 2.1

Version 0.10.3.5, 11 Jun, 2018
------------------------------
* Update fixer.io API
* Add ECB (European Central Bank) exchange rate provider

Version 0.10.3.4, 31 May, 2018
------------------------------
* Improved MPN in product feed
* Added availability to product feed
* Added additional images to product feed

Version 0.10.3.3, 31 May, 2018
------------------------------
* Add MPN to product feed

Version 0.10.3.2, 16 April, 2018
-------------------------------
* PayPal checkout deadlock fixes

Version 0.10.3.1, 16 April, 2018
-------------------------------
* Currency conversion only applied once to 'other' currency prices

Version 0.10.3.0, 5 April, 2018
-------------------------------
* Add other currency prices to full product page

Version 0.10.2.3, 21 Feb, 2018